--- a/src/components/common/BackgroundWithCircle.module.scss
+++ b/src/components/common/BackgroundWithCircle.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     position: relative;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--bg-1-color1);
     overflow: hidden;
     z-index: var(--bg-z-index);
@@ -12,10 +12,18 @@
       height: 620px;
       background-color: var(--bg-1-color2);
       border-radius: 50%;
-      top: -35%;
+      top: -295px;
       left: 50%;
       transform: translateX(-50%);
       z-index: var(--bg-z-index);
     }
+
+    .neroLogo {
+      width: 150px;
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+  }
   }
   
