feat: 支持在尼禄 logo 下插入文字了

--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -1,5 +1,7 @@
 :root {
-  --bg-1-color1: #F4F4F4;
-  --bg-1-color2: #B36A64;
+  --bg-1-color1: #f4f4f4;
+  --bg-1-color2: #b36a64;
   --bg-z-index: -1;
+  --nero-text-color: white;
+  --nero-text-font-size: 24px;
 }
