feat: 再度把尼禄 logo 迁回背景，方便 flex 布局

--- a/src/components/common/BackgroundWithCircle.module.scss
+++ b/src/components/common/BackgroundWithCircle.module.scss
@@ -17,4 +17,15 @@
     transform: translateX(-50%);
     z-index: var(--bg-z-index);
   }
+
+  .mainContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .NeroLogoWithText {
+      padding-top: 4vh;
+      padding-bottom: 12px;
+    }
+  }
 }
