feat: 背景圆的大小根据vw大小变化

--- a/src/components/common/BackgroundWithCircle.module.scss
+++ b/src/components/common/BackgroundWithCircle.module.scss
@@ -8,8 +8,8 @@
 
   .bgCircle {
     position: absolute;
-    width: 620px;
-    height: 620px;
+    width:160vw ;
+    height: 160vw;
     background-color: var(--bg-1-color2);
     border-radius: 50%;
     top: -295px;
