chore: 加了条注释

--- a/src/components/common/BackgroundWithCircle.module.scss
+++ b/src/components/common/BackgroundWithCircle.module.scss
@@ -24,6 +24,7 @@
     align-items: center;
 
     .NeroLogoWithText {
+      // 顶部稍微多留防止刘海屏遮挡
       padding-top: 4vh;
       padding-bottom: 12px;
     }
