--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -4,4 +4,5 @@
   --bg-z-index: -1;
   --nero-text-color: white;
   --nero-text-font-size: 24px;
+  --login-form-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.15);
 }
