--- a/src/views/LoginPage.module.scss
+++ b/src/views/LoginPage.module.scss
@@ -1,6 +1,7 @@
 .loginFormWrapper {
   width: calc(100% - 32px);
   height: 341px;
-  background-color: #FFFF;
-  border-radius: 8%;
-  box-shadow: var(--login-form-box-shadow)}
+  background-color: #ffff;
+  border-radius: 7%;
+  box-shadow: var(--login-form-box-shadow);
+}
