feat: 防止文本框超出

--- a/src/components/common/NeroLogoWithText.module.scss
+++ b/src/components/common/NeroLogoWithText.module.scss
@@ -10,4 +10,7 @@
   font-size: var(--nero-text-font-size);
   color: var(--nero-text-color);
   text-align: center;
+  max-width: calc(100vw - 60px);
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
