--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -1,7 +1,10 @@
 :root {
+  --z-index-level-1: 5;
+  --z-index-level-2: 10;
+  --z-index-level-3: 15;
+  --z-index-level-4: 20;
   --bg-1-color1: #f4f4f4;
   --bg-1-color2: #b36a64;
-  --bg-z-index: -1;
   --nero-text-color: white;
   --nero-text-font-size: 24px;
   --login-form-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.15);
