--- a/src/components/common/NeroLogoWithText.module.scss
+++ b/src/components/common/NeroLogoWithText.module.scss
@@ -1,16 +1,19 @@
-.neroLogo {
-  // 不要让图片宽度超过文字宽度太多
-  width: calc(var(--nero-text-font-size) * 5.5);
-  display: block;
-  margin: 0 auto;
-  padding-bottom: 4px;
-}
+.wrapper {
+  z-index: var(--z-index-level-1);
+  .neroLogo {
+    // 不要让图片宽度超过文字宽度太多
+    width: calc(var(--nero-text-font-size) * 5.5);
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 4px;
+  }
 
-.neroText {
-  font-size: var(--nero-text-font-size);
-  color: var(--nero-text-color);
-  text-align: center;
-  max-width: calc(100vw - 60px);
-  overflow: hidden;
-  text-overflow: ellipsis;
+  .neroText {
+    font-size: var(--nero-text-font-size);
+    color: var(--nero-text-color);
+    text-align: center;
+    max-width: calc(100vw - 60px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
