--- a/src/views/LoginPage.module.scss
+++ b/src/views/LoginPage.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 64px 24px 0;
+  padding: 64px 24px 32px;
   margin: 0 16px;
   z-index: 10;
 
@@ -28,12 +28,6 @@
     .evcInput {
       flex-grow: 1;
       margin-right: 8px;
-    }
-
-    .evcButton {
-      flex-shrink: 0;
-      width: 112px;
-      margin-left: auto;
     }
   }
 }
