--- a/src/components/common/SquareButton.module.scss
+++ b/src/components/common/SquareButton.module.scss
@@ -1,18 +1,47 @@
 .squareButton {
   width: 100%;
-  height: 48px;
+  height: 2em;
   border-radius: 5px;
   color: var(--square-button-text-color);
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 500;
   margin-bottom: 16px;
   background: var(--square-button-bg-color);
   border: none;
-  transition: all 0.3s ease;
-  position: relative;
   box-shadow: var(--square-button-shadow);
+  position: relative;
+  overflow: hidden;
+
+  &:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: calc(100% / 30);
+    height: calc(2em / 5);
+    background: rgba(255, 255, 255, 0.5);
+    opacity: 0;
+    border-radius: 100%;
+    transform: scale(1, 1) translate(-50%);
+    transform-origin: 50% 50%;
+  }
+
+  &:focus:not(:active)::after {
+    animation: ripple 1s ease-out;
+  }
 }
 
-.squareButton:active {
-  top: 2px;
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(25, 25);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(40, 40);
+  }
 }
