feat: caret-color 设为红色，删除输入时的 outline

--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -14,4 +14,5 @@
     rgba(255, 128, 107, 1) 100%
   );
   --square-button-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
+  --input-text-caret-color: #e65f65;
 }
