fix: SvgIcon 改为继承颜色，方便后续 selected

--- a/src/components/common/SvgIcon.module.scss
+++ b/src/components/common/SvgIcon.module.scss
@@ -1,5 +1,6 @@
 .svgTag {
-    max-width: 1.6em;
-    max-height: 1.6em;
+    width: 1.6em;
+    height: 1.6em;
     vertical-align: middle;
+    fill: currentColor;
 }
