--- a/src/views/LoginPage.module.scss
+++ b/src/views/LoginPage.module.scss
@@ -18,6 +18,10 @@
     margin-bottom: 32px;
     border-bottom: 1px solid #ededed;
 
+    .svgIcon {
+      fill: #999999;
+    }
+
     input {
       margin-left: 8px;
       width: 100%;
