fix: 修复内容过多会超出父元素 bug

--- a/src/views/WordPage.module.scss
+++ b/src/views/WordPage.module.scss
@@ -41,7 +41,8 @@
     border-radius: 8px;
     box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
     padding: 18px;
-    flex-grow: 10;
+    height: 100%;
+    overflow: auto;
 
     h2 {
       color: white;
