fix: 去除滚动条

--- a/src/views/WordPage.module.scss
+++ b/src/views/WordPage.module.scss
@@ -46,6 +46,10 @@
     height: 100%;
     overflow: auto;
 
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
     h2 {
       color: white;
       border-radius: 3px;
