--- a/src/views/WordPage.module.scss
+++ b/src/views/WordPage.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  padding: 0 24px;
+  padding: 0 6vw;
   background-color: #fef4f3;
   height: 100vh;
 
@@ -99,9 +99,9 @@
 
     button {
       border: none;
-      font-size: 24px;
-      width: 4em;
-      height: 2em;
+      font-size: 4.5vw;
+      width: 6em;
+      height: 2.5em;
       border-radius: 6%;
       color: white;
       box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
