fix: .transition 颜色消失

--- a/src/views/WordPage.module.scss
+++ b/src/views/WordPage.module.scss
@@ -83,7 +83,7 @@
           font-weight: normal;
         }
 
-        .translation {
+        &.translation {
           color: #999;
         }
       }
