--- a/src/views/WordPage.module.scss
+++ b/src/views/WordPage.module.scss
@@ -57,6 +57,8 @@
       font-size: 18px;
       padding: 2px 8px;
       margin-bottom: 0.5em;
+      // 这里 h2 高度写死了所以直接用 px，后期修改时注意
+      line-height: 24px;
     }
 
     .meaning {
