feat: 把 FooterBar 颜色改为变量

--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -15,4 +15,8 @@
   );
   --square-button-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
   --input-text-caret-color: #e65f65;
+  --footBar-bg-color:  #f7f7f7;
+  --footBar-border-color: #ddd;
+  --footBar-li-text-color: #999b9a;
+  --footBar-li-selected-text-color: #e65f65;
 }
