--- a/src/components/common/SquareButton.module.scss
+++ b/src/components/common/SquareButton.module.scss
@@ -2,13 +2,13 @@
   width: 100%;
   height: 2em;
   border-radius: 5px;
-  color: var(--square-button-text-color);
+  color: var(--squareButton-text-color);
   font-size: 22px;
   font-weight: 500;
   margin-bottom: 16px;
-  background: var(--square-button-bg-color);
+  background: var(--squareButton-bg-color);
   border: none;
-  box-shadow: var(--square-button-shadow);
+  box-shadow: var(--squareButton-shadow);
   position: relative;
   overflow: hidden;
 
