--- a/src/views/LoginPage.module.scss
+++ b/src/views/LoginPage.module.scss
@@ -1,7 +1,7 @@
-.loginFormWrapper {
+.wrapper {
   background-color: #ffff;
   border-radius: 7%;
-  box-shadow: var(--login-form-box-shadow);
+  box-shadow: var(--loginPage-box-shadow);
   display: flex;
   align-items: center;
   flex-direction: column;
