--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -1,20 +1,22 @@
 :root {
+  // 通用变量
   --z-index-level-1: 5;
-  --bg-1-color1: #f4f4f4;
-  --bg-1-color2: #b36a64;
-  --nero-text-color: white;
-  --nero-text-font-size: 24px;
-  --login-form-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.15);
-  --round-button-text-color: white;
-  --round-button-bg-color: #e65f65;
-  --square-button-text-color: white;
-  --square-button-bg-color: linear-gradient(
+  // 组件变量
+  --backgroundWithCircle-bg-color: #f4f4f4;
+  --backgroundWithCircle-bgCircle-bg-color: #b36a64;
+  --neroLogoWithText-neroText-text-color: white;
+  --neroLogoWithText-neroText-font-size: 24px;
+  --loginPage-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.15);
+  --roundButton-text-color: white;
+  --roundButton-bg-color: #e65f65;
+  --squareButton-text-color: white;
+  --squareButton-bg-color: linear-gradient(
     90deg,
     rgba(231, 96, 102, 1) 0%,
     rgba(255, 128, 107, 1) 100%
   );
-  --square-button-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
-  --input-text-caret-color: #e65f65;
+  --squareButton-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
+  --loginPage-input-caret-color: #e65f65;
   --footBar-bg-color:  #f7f7f7;
   --footBar-border-color: #ddd;
   --footBar-li-text-color: #999b9a;
