--- a/src/views/WordPage.module.scss
+++ b/src/views/WordPage.module.scss
@@ -73,7 +73,7 @@
       }
     }
 
-    .examples {
+    .exampleListWrapper {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
