feat: 为每个按钮都绑定了事件/buttons → buttonList

--- a/src/views/WordPage.module.scss
+++ b/src/views/WordPage.module.scss
@@ -93,7 +93,7 @@
     }
   }
 
-  .buttonsWrapper {
+  .buttonListWrapper {
     display: flex;
     justify-content: space-between;
     margin: 16px 0;
