--- a/src/views/WordPage.module.scss
+++ b/src/views/WordPage.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   padding: 0 6vw;
   background-color: #fef4f3;
+  // 设置 height: 91.5vh; 可以不拉伸页面
   height: 100vh;
 
   .menuIcon {
