feat: 封装了 innerHeightStyle 防止搜索栏遮挡

--- a/src/components/common/BackgroundWithCircle.module.scss
+++ b/src/components/common/BackgroundWithCircle.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   position: relative;
   width: 100vw;
-  min-height: 100vh;
+  max-height: 100vh;
   background-color: var(--backgroundWithCircle-bg-color);
   overflow: hidden;
 
