--- a/src/views/ReviewPage.module.scss
+++ b/src/views/ReviewPage.module.scss
@@ -4,7 +4,7 @@
   padding: 0 6vw;
   background-color: #fef4f3;
   // 设置 height: 91.5vh; 可以不拉伸页面
-  height: 100vh;
+  max-height: 100vh;
 
   .menuIcon {
     width: 2.5em;
@@ -96,7 +96,7 @@
     justify-content: space-between;
     margin: 16px 0;
     margin-top: 16px;
-    margin-bottom: 64px;
+    // margin-bottom: 64px;
 
     button {
       border: none;
