--- a/src/views/ReviewPage.module.scss
+++ b/src/views/ReviewPage.module.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   padding: 0 6vw;
   background-color: #fef4f3;
-  // 设置 height: 91.5vh; 可以不拉伸页面
-  max-height: 100vh;
+  height: 100vh;
 
   .menuIcon {
     width: 2.5em;
