--- a/src/views/ReviewPage.module.scss
+++ b/src/views/ReviewPage.module.scss
@@ -1,15 +1,19 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  padding: 0 6vw;
+  align-items: center;
   background-color: var(--reviewPage-bg-color);
   height: 100vh;
+  padding-top: 1em;
 
-  .menuIcon {
-    width: 2.5em;
-    height: 2.5em;
-    margin: 8px 0;
-    margin-left: auto;
+  > * {
+    width: calc(100vw - 12vw);
+    margin-bottom: 1em;
+
+    &.footBar {
+      width: 100vw;
+      margin-bottom: 0;
+    }
   }
 
   .wordWrapper {
@@ -17,27 +21,32 @@
     color: var(--reviewPage-wordWrapper-word-text-color);
     border-radius: 8px;
     box-shadow: var(--reviewPage-wordWrapper-box-shadow);
-    margin-bottom: 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 16px 0;
+    position: relative;
+
+    .menuIcon {
+      width: 1.5em;
+      height: 1.5em;
+      position: absolute;
+      right: 0.75em;
+      top: 0.5em;
+    }
 
     .word {
       font-size: 24px;
-      user-select: none;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
     }
 
     .pronunciation {
       font-size: 14px;
+      // 保证 voiceIcon 垂直居中
       display: flex;
       align-items: center;
 
       .voiceIcon {
-        margin-left: 4px;
+        margin-left: 0.3em;
       }
     }
   }
@@ -94,9 +103,6 @@
   .buttonListWrapper {
     display: flex;
     justify-content: space-between;
-    margin: 16px 0;
-    margin-top: 16px;
-    // margin-bottom: 64px;
 
     button {
       border: none;
