--- a/src/components/common/NeroLogoWithText.module.scss
+++ b/src/components/common/NeroLogoWithText.module.scss
@@ -10,7 +10,7 @@
 
   .neroText {
     font-size: var(--neroLogoWithText-neroText-font-size);
-    color: var(--neroLogoWithText-neroText-text-color);
+    color: var(--white);
     text-align: center;
     max-width: calc(100vw - 60px);
     overflow: hidden;
