--- a/src/components/common/FooterBar.module.scss
+++ b/src/components/common/FooterBar.module.scss
@@ -1,19 +1,19 @@
 .wrapper {
   display: flex;
   justify-content: space-around;
-  background-color: var(--footBar-bg-color);
-  border-top: var(--footBar-border-color) 1px solid;
+  background-color: var(--grey-brightness-level-1);
+  border-top: var(--grey-brightness-level-4) 1px solid;
 
   li {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 3px 0;
-    color: var(--footBar-li-text-color);
+    color: var(--grey-brightness-level-5);
     font-size: 12px;
 
     &.selected {
-      color: var(--footBar-li-selected-text-color);
+      color: var(--red-brightness-level-1);
     }
 
     .svgIcon {
