--- a/src/components/common/SquareButton.module.scss
+++ b/src/components/common/SquareButton.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 2em;
   border-radius: 5px;
-  color: var(--squareButton-text-color);
+  color: var(--white);
   font-size: 22px;
   font-weight: 500;
   margin-bottom: 16px;
