--- a/src/views/ReviewPage.module.scss
+++ b/src/views/ReviewPage.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--reviewPage-bg-color);
+  background-color: var(--red-brightness-level-3);
   height: 100vh;
   padding-top: 1em;
 
@@ -17,8 +17,8 @@
   }
 
   .wordWrapper {
-    background-color: var(--reviewPage-wordWrapper-bg-color);
-    color: var(--reviewPage-wordWrapper-word-text-color);
+    background-color: var(--white);
+    color: var(--red-brightness-level-1);
     border-radius: 8px;
     box-shadow: var(--reviewPage-wordWrapper-box-shadow);
     display: flex;
