--- a/src/components/common/RoundButton.module.scss
+++ b/src/components/common/RoundButton.module.scss
@@ -5,7 +5,7 @@
   border-radius: 1em;
   border: none;
   color: var(--white);
-  background-color: var(--red-brightness-level-1);
+  background-color: var(--red-brightness-e65);
   transition: all 0.3s ease;
   position: relative;
   // 防止在 flex 布局中被压缩
