--- a/src/components/common/FooterBar.module.scss
+++ b/src/components/common/FooterBar.module.scss
@@ -1,19 +1,19 @@
 .wrapper {
   display: flex;
   justify-content: space-around;
-  background-color: var(--grey-brightness-level-1);
-  border-top: var(--grey-brightness-level-4) 1px solid;
+  background-color: var(--grey-brightness-f7f);
+  border-top: var(--grey-brightness-ddd) 1px solid;
 
   li {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 3px 0;
-    color: var(--grey-brightness-level-5);
+    color: var(--grey-brightness-999);
     font-size: 12px;
 
     &.selected {
-      color: var(--red-brightness-level-1);
+      color: var(--red-brightness-e65);
     }
 
     .svgIcon {
