--- a/src/components/common/SquareButton.module.scss
+++ b/src/components/common/SquareButton.module.scss
@@ -8,7 +8,7 @@
   margin-bottom: 16px;
   background: var(--squareButton-bg-color);
   border: none;
-  box-shadow: var(--squareButton-shadow);
+  box-shadow: var(--box-shadow-deep-right-bottom);
   position: relative;
   overflow: hidden;
 
