--- a/src/views/ReviewPage.module.scss
+++ b/src/views/ReviewPage.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--red-brightness-level-3);
+  background-color: var(--red-brightness-fef);
   height: 100vh;
   padding-top: 1em;
 
@@ -18,9 +18,9 @@
 
   .wordWrapper {
     background-color: var(--white);
-    color: var(--red-brightness-level-1);
+    color: var(--red-brightness-e65);
     border-radius: 8px;
-    box-shadow: var(--reviewPage-wordWrapper-box-shadow);
+    box-shadow: var(--box-shadow-deep-right-bottom);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,7 +52,7 @@
   }
 
   .detailWrapper {
-    background-color: white;
+    background-color: var(--white);
     border-radius: 8px;
     box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
     padding: 18px;
@@ -61,9 +61,9 @@
     font-size: 14px;
 
     h2 {
-      color: white;
+      color: var(--white);
       border-radius: 3px;
-      background-color: #e65f65;
+      background-color: var(--red-brightness-e65);
       padding: 1px 4px;
       margin-bottom: 0.5em;
     }
@@ -89,12 +89,12 @@
         margin-bottom: 0.5em;
 
         strong {
-          color: #e65f65;
+          color: var(--red-brightness-e65);
           font-weight: normal;
         }
 
         &.translation {
-          color: #999;
+          color: var(--grey-brightness-999);
         }
       }
     }
@@ -110,8 +110,8 @@
       width: 6em;
       height: 2.5em;
       border-radius: 6%;
-      color: white;
-      box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
+      color: var(--white);
+      box-shadow: var(--box-shadow-deep-right-bottom);
 
       &:active {
         filter: brightness(113%);
@@ -119,15 +119,15 @@
     }
 
     li:first-child button {
-      background-color: #4ac87e;
+      background-color: var(--reviewPage-li-button-green);
     }
 
     li:nth-child(2) button {
-      background-color: #ff9f48;
+      background-color: var(--reviewPage-li-button-yellow)
     }
 
     li:nth-child(3) button {
-      background-color: #e65f65;
+      background-color: var(--reviewPage-li-button-red);
     }
   }
 }
