chore: 降低黄色按钮亮度

--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -22,6 +22,6 @@
     rgba(255, 128, 107, 1) 100%
   );
   --reviewPage-li-button-green: #4ac87e;
-  --reviewPage-li-button-yellow: #f7d74c;
+  --reviewPage-li-button-yellow: #FF9F48;
   --reviewPage-li-button-red: #e65f65;
 }
